# bert.bill

./: .dockerignore  .env  .gitignore  .parcelrc  .proxyrc.js  Dockerfile  README.md  bert.bill.2f0dc019.css  bert.bill.2f0dc019.css.br  bert.bill.2f0dc019.css.map  bert.bill.8e675666.css  bert.bill.8e675666.css.br  bert.bill.8e675666.css.map  bert.bill.920b9c7b.css  bert.bill.920b9c7b.css.br  bert.bill.920b9c7b.css.map  bill.config.yaml.example  docker-compose.yml  entrypoint.sh  index.068d4467.js  index.068d4467.js.br  index.068d4467.js.map  index.14627c0d.js  index.14627c0d.js.br  index.14627c0d.js.map  index.1cca63ae.js  index.1cca63ae.js.br  index.1cca63ae.js.map  index.2e1c2e95.js  index.2e1c2e95.js.br  index.2e1c2e95.js.map  index.36ebf026.js  index.36ebf026.js.br  index.36ebf026.js.map  index.60d5b522.js  index.60d5b522.js.br  index.60d5b522.js.map  index.69c55896.js  index.69c55896.js.br  index.69c55896.js.map  (+25 more)
bertdotbill/: __init__.py  app.py  args.py  cli.py  config.py  dashboard.py  defaults.py  entrypoint.py  extensions.py  lessons.py  logger.py  nt_webterminal.py  posix_webterminal.py  sidebar.py  topics.py  websocket.py  webterminal.py
bertdotbill/spyder_terminal/server/: __init__.py  common.py  routes.py
docker/: Dockerfile  nginx.conf
etc/: dashboard.yaml  lessons.yaml  sidebar.yaml
spyder_terminal/: __main__.py
src/: App.tsx  index.html  index.jsx  index.scss
src/components/App/: App.tsx
src/components/CollapsibleSection/: CollapsibleSection.tsx
src/components/Dashboard/: Dashboard.jsx
src/components/Footer/: Footer.scss  Footer.tsx
src/pages/: Dashboard.jsx  LessonPage.jsx  LessonPage.scss
src/partials/: Banner.jsx  Sidebar.jsx  SidebarLinkGroup.jsx  SidebarPageGroup.jsx
src/utils/: Utils.js
(+32 files in other folders)
