[check-manifest]
ignore =
    .babelrc
    .parcelrc
    .proxyrc.js
    .yarnrc
    package.json
    package-lock.json
    requirements
    runtests.py
    tsconfig.json
    webpack.config.js
    yarn.lock
    
[metadata]
name = bertdotbill
author = Engelbert Tejeda
author_email = berttejeda@gmail.com
description = Bert's Interactive Lesson Loader
version = file: VERSION.txt
url = https://github.com/berttejeda/bert.bill
keywords =
  yaml 
  configuration
  config
  file
  python
  settings
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
include_package_data = true
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel >= 0.31
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  aiohttp>=3.8.1,<3.9.0
  bertdotconfig>=4.2.0,<4.3.0
  bertdotsshutil==1.1.2
  coloredlogs==15.0.1
  flask==2.1.2
  flask-cors==3.0.10
  jinja2>=3.1.1,<4.0
  markdown>=3.3.6,<4.0
  python-dotenv>=0.20.0,<1.0
  pexpect>=4.8.0,<5.0; sys_platform != 'win32'
  pymdown-extensions>=9.5,<10.0
  pywinpty>=1.1.3,<2.0; sys_platform == 'win32'
  requests>=2.22.0,<3.0.0
  setuptools
  tornado>=6.1,<7.0
  ws4py>=0.5.1,<1.0

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  bill=bertdotbill.app:main

[options.data_files]